# tokyonight.nvim

./: .gitignore  .lazy.lua  .lua-format  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEWS.md  README.md  pygments.md  stylua.toml
.github/: .release-please-manifest.json  labeler.yml  release-please-config.json
colors/: dullahan-day.lua  dullahan-gold.lua  dullahan-moon.lua  dullahan-night.lua  dullahan-storm.lua  dullahan-white.lua  dullahan.lua  solarized-osaka-day.lua  solarized-osaka-moon.lua  solarized-osaka-night.lua  solarized-osaka-storm.lua  solarized-osaka.lua  tokyonight-day.lua  tokyonight-day.vim  tokyonight-moon.lua  tokyonight-night.lua  tokyonight-night.vim  tokyonight-storm.lua  tokyonight-storm.vim  tokyonight.lua  tokyonight.vim
doc/: dullahan.nvim.txt  solarized-osaka.nvim.txt  tags  tokyonight.nvim.txt  tokyonight.txt
extra/: build  kitty_tokyonight_night.conf  kitty_tokyonight_storm.conf
extras/: alacritty_tokyonight_night.yml  alacritty_tokyonight_storm.yml  fish_tokyonight_night.fish  fish_tokyonight_storm.fish  foot_tokyonight_day.ini  foot_tokyonight_moon.ini  foot_tokyonight_night.ini  foot_tokyonight_storm.ini  fzf_tokyonight_day.sh  fzf_tokyonight_night.sh  fzf_tokyonight_storm.sh  gen  iterm_tokyonight_night.itermcolors  iterm_tokyonight_storm.itermcolors  kitty_tokyonight_day.conf  kitty_tokyonight_moon.conf  kitty_tokyonight_night.conf  kitty_tokyonight_storm.conf  konsole_tokyonight_day.colorscheme  konsole_tokyonight_night.colorscheme  konsole_tokyonight_storm.colorscheme  (+21 more)
extras/pygments/: .gitignore  README.md  pyproject.toml
(+677 files in other folders)
